src/logs/unified_inference-5129801.err
NOTE: This module uses Singularity. Some commands execute inside the container
(e.g. python3, pip3).

  File "/scratch/project_2010376/JDs_Project/AML_Persister_Analysis/src/inference_reduced_gene.py", line 1
    <insert the Python code from above>
    ^
SyntaxError: invalid syntax
srun: error: g1102: task 0: Exited with exit code 1
srun: Terminating StepId=5129801.0
